--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
             }
         ],
         "no-unused-vars": ["warn"],
-        "indent": 0,
+        "indent": ["error", "tab"],
         "linebreak-style": ["error", "unix"],
         "quotes": ["error", "single"],
         "semi": ["error", "always"]
