--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "express": "^4.15.2",
     "mysql2": "^2.0.1",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
